--- a/pom.xml
+++ b/pom.xml
@@ -11,16 +11,17 @@
   <url>http://maven.apache.org</url>
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
   </properties>
   
-<distributionManagement>
-  <repository>
-    <id>internal.repo</id>
-    <name>Internal repo</name>
-    <url>file:///var/lib/jenkins/myartifacts/</url>
-  </repository>
-</distributionManagement>
+  <distributionManagement>
+    <repository>
+      <id>internal.repo</id>
+      <name>Internal repo</name>
+      <url>file:///var/lib/jenkins/myartifacts/</url>
+    </repository>
+  </distributionManagement>
 
   <dependencies>
     <dependency>
